--- a/w4-js/Class-List-Project/style.css
+++ b/w4-js/Class-List-Project/style.css
@@ -28,12 +28,12 @@ header {
 }
 
 header ul {
-    margin-top: 2.2em;
+    margin-top: 2.2rem;
 }
 
 header ul li {
     display: inline-block;
-    font-size: 1.2em;
+    font-size: 1.8em;
     margin-right: 0.9rem;
 }
 
@@ -50,10 +50,53 @@ main {
 }
 
 .article {
-    width: 8rem;
-    padding: 0.5rem 0.5rem 0.5rem 0;
+    position: relative;
+    width: 20rem;
+    margin: 0.5rem 0.5rem 0.5rem 0;
+}
+
+.article:hover .overlay {
+    display: initial;
+    transition: all 0.5s ease;
+}
+.article:hover .text {
+    display: initial;
+    transition: all 0.5s ease;
+}
+
+.overlay {
+    display: none;
+    position: absolute;
+    background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 0.1) 50%,
+        rgba(0, 0, 0, 0.9) 100%
+    );
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.text {
+    display: none;
+    color: white;
+    position: absolute;
+    bottom: 1.5rem;
+    left: 2rem;
+    padding: 1rem 2rem;
+}
+
+.text h2 {
+    font-size: 2rem;
+}
+.text p {
+    font-size: 1.2rem;
+    font-weight: 100;
 }
 
 img {
     width: 100%;
+    z-index: -1;
 }
